state model dropdown alignment issue

--- a/src/app/dashboard/services/manage/manage.component.scss
+++ b/src/app/dashboard/services/manage/manage.component.scss
@@ -151,3 +151,9 @@
     color: black;
   }
 }
+
+.dropdown-menu {
+  &.show{
+    transform: translate(-132px, 32px) !important;
+  }
+}
